<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_all_server_fragment"
    tools:context=".views.addStatus.AddStatusFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.085" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="329dp" />

    <TextView
        android:id="@+id/textView5"
        style="@style/title_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/title_add_status_fragment"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/background_card_all_server_fragment"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/title_edit_text_add_statue_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nom_add_status_fragment" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text_add_status_fragment"
                        android:padding="8dp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/title_edit_text_add_statue_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slug_add_status_fragment" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text_add_status_fragment"
                        android:padding="8dp"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_marginRight="4dp"
                                android:src="@drawable/ic_baseline_circle_24" />

                            <TextView
                                android:id="@+id/textView9"
                                style="@style/title_edit_text_add_statue_fragment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/caracter_accepted_1_add_status_fragment" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView10"
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_marginRight="4dp"
                                android:src="@drawable/ic_baseline_circle_24" />

                            <TextView
                                android:id="@+id/textView3"
                                style="@style/title_edit_text_add_statue_fragment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/caracter_accepted_2_add_status_fragment" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_marginRight="4dp"
                                android:src="@drawable/ic_baseline_circle_24" />

                            <TextView
                                android:id="@+id/textView6"
                                style="@style/title_edit_text_add_statue_fragment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/caracter_accepted_3_add_status_fragment" />
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_new_status_button"
                    style="@style/main_button_bienvenue_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/text_button_add_status_fragment"
                    app:cornerRadius="30dp" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>